2005-07-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* macosx/tkMacOSXMouseEvent.c (TkMacOSXProcessMouseEvent):
	corrected if expression error (use of = instead of ==)

2005-07-18  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextMark.c: fix to segfault in "mark prev"
	* tests/textIndex.test: [Bug 1240221]

	* tests/textWind.test: make test more robust to avoid infinite loop

2005-07-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/getOpenFile.n: correct -multiple docs (takes boolean)

2005-07-05  Don Porter  <dgp@users.sourceforge.net>

	* unix/Makefile.in:	Purged use of TCLTESTARGS [RFE 1161550].

2005-06-23  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkConsole.c (TkConsolePrint): prevent potential NULL deref.

	* macosx/tkMacOSXDefault.h: change ENTRY_BORDER defaults to from 5 to 2
	to make default entry widgets in TkAqua look like in other aqua apps
	(and have same border dimensions as other platforms). [Bug 1176610]

2005-06-21  Donal K. Fellows  <dkf@users.sf.net>

	* doc/GetBitmap.3: Fix silly error in SYNOPSIS. [Bug 1224983]

2005-06-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkImgGIF.c: Cleanse all static (i.e. non-thread-safe) data
	at a miniscule performance hit.

2005-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: for X11 build, add -X11 suffix to unversioned wish
	symbolic link.

	* unix/tcl.m4 (Darwin): add -headerpad_max_install_names to LDFLAGS to
	ensure we can always relocate binaries with install_name_tool.

	* unix/configure: autoconf-2.59

2005-06-07  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	Bump patchlevel to a4 to distinguish from a3 release.

2005-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.5a3 TAGGED FOR RELEASE ***

2005-06-02  Jim Ingham  <jingham@apple.com>

	* generic/tkEvent.c (InvokeFocusHandlers): On Mac OS X the
	scrollwheel events are sent to the window under the mouse,
	not to the focus window.
	
	Another patch from M. Kirkham.
